--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^3.3.1",
     "angular-oauth2-oidc": "^1.0.3",
     "angular2-notifications": "^0.4.49",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
